fix unaligned nav and logo for native devices

--- a/client/src/assets/css/stock.css
+++ b/client/src/assets/css/stock.css
@@ -416,7 +416,7 @@ input, .MuiInputBase-root, span {
 @media screen and (max-width: 650px) and (max-height: 825px){
 
   .landing-logo  {
-    padding-top: 10em;
+    padding-top: 5em;
   }
 
   .integration-logo {
@@ -439,15 +439,12 @@ input, .MuiInputBase-root, span {
   }
 
   nav {
-    padding: .5em .25em;
+    padding: .5em 0em;
   }
 
   nav ul li {
-    padding-right: 5%;
-  }
-
-  nav ul li:last-of-type {
-    padding-right: 12.5%;
+    padding-right: 7.75% !important;
+    padding-left: .5% !important;
   }
 
   .landing-logo {
